Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-53128

Map objects move incorrectly on map resize

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.6.2, 5.7.1
    • 5.7.0 Beta
    • None
    • Windows, Qt 5.7 from git
    • Id26b111e8e33075082fa599e6eac92cb8089f5e4

    Description

      In the example below you have to resize your application window. This also happens with splitview layouts etc
      Afterwards items are redrawn correctly when you pan/zoom the map itself.

      import QtQuick 2.7
      import QtQuick.Controls 1.5
      import QtLocation 5.7
      
      ApplicationWindow {
          visible: true
          width: 640
          height: 480
      
          Map {
              anchors.fill: parent
              plugin: Plugin { name: "osm" }
      
              center {
                  latitude: 0.0
                  longitude: 10.0
              }
      
              MapCircle {
                  center {
                      latitude: 0.0
                      longitude: 10.0
                  }
      
                  radius: 5000.0
                  color: 'green'
                  border.width: 3
              }
          }
      }
      

      Attachments

        Issue Links

          For Gerrit Dashboard: QTBUG-53128
          # Subject Branch Project Status CR V

          Activity

            People

              paangele Paolo Angelelli
              alexander_lanin Alexander
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Gerrit Reviews

                  There are no open Gerrit changes